plugins {
    id 'java'
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'org.hibernate.orm' version '6.2.7.Final'
    id 'org.graalvm.buildtools.native'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}


dependencies {
    implementation Spring.boot.data.jpa
    implementation Spring.boot.jdbc
    implementation Spring.boot.security
    implementation Spring.boot.validation
    implementation Spring.boot.web
    implementation Spring.boot.webflux
    compileOnly 'org.projectlombok:lombok:_'
    developmentOnly Spring.boot.devTools
    runtimeOnly 'org.postgresql:postgresql:_'
    annotationProcessor Spring.boot.configurationProcessor
    annotationProcessor 'org.projectlombok:lombok:_'
    testImplementation Spring.boot.test
    testImplementation Spring.reactor.test
    testImplementation Spring.security.spring_security_test

    implementation 'io.jsonwebtoken:jjwt-api:_'
    implementation 'io.jsonwebtoken:jjwt-impl:_'
    implementation 'io.jsonwebtoken:jjwt-jackson:_'

    implementation 'commons-io:commons-io:_'


    implementation 'com.nimbusds:nimbus-jose-jwt:_'


}

tasks.named('test') {
    useJUnitPlatform()
}

hibernate {
    enhancement {
        enableAssociationManagement = true
    }
}

